syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.melli.wallet.grpc";
option java_outer_classname = "CashInProto";

package wallet;

import "base.proto";

// Cash In Service
service CashInService {
  rpc GenerateUuid(CashGenerateUuidRequestGrpc) returns (BaseResponseGrpc) {}
  rpc Charge(CashInWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc InquiryCashIn(InquiryCashInRequestGrpc) returns (BaseResponseGrpc) {}
}

// Request Messages
message CashGenerateUuidRequestGrpc {
  string national_code = 1;
  string amount = 2;
  string account_number = 3;
}

message CashInWalletRequestGrpc {
  string unique_identifier = 1;
  string reference_number = 2;
  string amount = 3;
  string national_code = 4;
  string additional_data = 5;
  string cash_in_type = 6;
  string account_number = 7;
  string sign = 8;
}

message InquiryCashInRequestGrpc {
  string unique_identifier = 1;
}
